[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/sprites/bullet_red.png" type="Texture" id=1]
[ext_resource path="res://src/worlds/scripts/Bullet_red.gd" type="Script" id=2]
[ext_resource path="res://src/sounds/sfx/explosion.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.8456

[node name="Bullet_red" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PlayerHurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
